// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2000",
      "hora": "10:30",
      "id": 1620610949403,
      "mascota": "Nuevo mascota",
      "propietario": "Frank",
      "sintomas": "Tos",
      "telefono": "0414",
    },
  ],
}
`;

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2000",
      "hora": "10:30",
      "id": 1620610949403,
      "mascota": "Bob",
      "propietario": "Frank",
      "sintomas": "Tos",
      "telefono": "0414",
    },
  ],
}
`;
